<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context=".AboutMeActivity"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="3">
    <TextView
            android:text="@string/about_me_welcome"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/about_me_size_0"
            android:id="@+id/welcome_TV"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/wineBerry"
    />
    <TextView
            android:text="@string/about_me_introduction"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/about_me_size_0"
            android:id="@+id/introduction_TV"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/lapisLazuli"
    />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/about_me_size_0"
            android:weightSum="2"
            android:layout_weight="1"
            android:baselineAligned="false">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="@dimen/about_me_size_0"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_weight="1"
                android:gravity="center">
            <TextView
                    android:text="@string/about_me_units_kilograms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/copper"
                    android:gravity="center"
            />
            <TextView
                    android:text="@string/about_me_units_centimeters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/copper"
                    android:gravity="center"
            />
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="@dimen/about_me_size_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="2"
                android:gravity="center">
            <TextView
                    android:text="@string/about_me_units_pounds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/titian"
                    android:gravity="center"
            />
            <TextView
                    android:text="@string/about_me_units_inches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/titian"
                    android:gravity="center"
            />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>