<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/date_label_TV"
            android:text="@string/item_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/wineBerry"
            android:textSize="@dimen/text_size_large"
            android:layout_marginStart="@dimen/item_margin_sides"
            android:layout_marginTop="@dimen/item_margin_top_bottom"
    />
    <TextView
            android:id="@+id/date_TV"
            android:text="@string/global_temporary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/copper"
            android:textSize="@dimen/text_size_large"
            android:layout_toEndOf="@id/date_label_TV"
            android:layout_marginStart="@dimen/item_margin_elements"
            android:layout_marginTop="@dimen/item_margin_top_bottom"
            />
    <TextView
            android:id="@+id/weight_label_TV"
            android:text="@string/item_weight_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/wineBerry"
            android:textSize="@dimen/text_size_small"
            android:layout_below="@id/date_label_TV"
            android:layout_marginStart="@dimen/item_margin_sides"
    />
    <TextView
            android:id="@+id/weight_TV"
            android:text="@string/global_temporary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/titian"
            android:textSize="@dimen/text_size_small"
            android:layout_below="@id/date_label_TV"
            android:layout_toEndOf="@id/weight_label_TV"
            android:layout_marginStart="@dimen/item_margin_elements"
            />
    <TextView
            android:id="@+id/weight_unit_TV"
            android:text="@string/global_temporary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lapisLazuli"
            android:textSize="@dimen/text_size_small"
            android:layout_below="@id/date_label_TV"
            android:layout_toEndOf="@id/weight_TV"
            android:layout_marginStart="@dimen/item_margin_elements"
    />
    <TextView
            android:id="@+id/height_label_TV"
            android:text="@string/item_height_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/wineBerry"
            android:textSize="@dimen/text_size_small"
            android:layout_below="@id/weight_label_TV"
            android:layout_marginStart="@dimen/item_margin_sides"
    />
    <TextView
            android:id="@+id/height_TV"
            android:text="@string/global_temporary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/titian"
            android:textSize="@dimen/text_size_small"
            android:layout_below="@id/weight_label_TV"
            android:layout_toEndOf="@id/height_label_TV"
            android:layout_marginStart="@dimen/item_margin_elements"
            />
    <TextView
            android:id="@+id/height_unit_TV"
            android:text="@string/global_temporary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lapisLazuli"
            android:textSize="@dimen/text_size_small"
            android:layout_below="@id/weight_label_TV"
            android:layout_toEndOf="@id/height_TV"
            android:layout_marginStart="@dimen/item_margin_elements"
    />
    <TextView
            android:id="@+id/bmi_label_TV"
            android:text="@string/item_bmi_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/wineBerry"
            android:textSize="@dimen/text_size_small"
            android:layout_below="@id/height_label_TV"
            android:layout_marginStart="@dimen/item_margin_sides"
    />
    <TextView
            android:id="@+id/bmi_TV"
            android:text="@string/global_temporary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/titian"
            android:textSize="@dimen/text_size_small"
            android:layout_below="@id/height_label_TV"
            android:layout_toEndOf="@id/bmi_label_TV"
            android:layout_marginStart="@dimen/item_margin_elements"
            />
</RelativeLayout>