<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <ImageView
            android:layout_width="@dimen/about_me_size_0"
            android:layout_height="@dimen/about_me_size_0"
            android:src="@drawable/bmi"
            android:id="@+id/imageIV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            android:layout_marginTop="@dimen/item_margin_top_bottom"/>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3"
    />
    <EditText
            android:id="@+id/weightET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="@dimen/main_margin_sides"
            android:layout_marginEnd="@dimen/main_margin_sides"
            android:singleLine="false"
            android:selectAllOnFocus="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/weightTV"/>
    <EditText
            android:id="@+id/heightET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="@dimen/main_margin_sides"
            android:layout_marginEnd="@dimen/info_margin_sides"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heightTV"
            app:layout_constraintHorizontal_bias="1.0"
    />
    <Button
            android:id="@+id/buttonBMI"
            android:text="@string/main_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_margin_sides"
            android:layout_marginEnd="@dimen/main_margin_sides"
            android:layout_marginBottom="@dimen/main_margin_bottom"
            android:background="@color/coral"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:id="@+id/bmiTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/global_temporary"
            android:textSize="30sp"
            android:visibility="invisible"
            android:layout_marginTop="@dimen/main_margin_elements_20"
            app:layout_constraintTop_toBottomOf="@+id/heightET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:id="@+id/bmiDescTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/global_temporary"
            android:textSize="24sp"
            android:layout_marginTop="@dimen/main_margin_elements_20"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/bmiTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:id="@+id/weightTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_units_weight_kg"
            android:textColor="@color/wineBerry"
            android:layout_marginStart="@dimen/main_margin_sides"
            android:layout_marginTop="@dimen/main_margin_elements_10"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:id="@+id/heightTV"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/main_units_height_cm"
            android:textColor="@color/wineBerry"
            android:layout_marginStart="@dimen/main_margin_sides"
            android:layout_marginTop="@dimen/main_margin_elements_10"
            app:layout_constraintTop_toBottomOf="@+id/weightET"
            app:layout_constraintStart_toStartOf="parent"
    />
    <Button
            android:id="@+id/buttonInfo"
            android:layout_width="@dimen/main_square_50"
            android:layout_height="@dimen/main_square_50"
            android:background="@drawable/info"
            android:layout_marginStart="@dimen/main_margin_elements_20"
            android:layout_marginTop="@dimen/main_margin_elements_10"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/bmiTV"
            app:layout_constraintStart_toEndOf="@+id/bmiDescTV"
    />
</androidx.constraintlayout.widget.ConstraintLayout>